--- a/mjd-couchdb-db/local.ini
+++ b/mjd-couchdb-db/local.ini
@@ -24,11 +24,11 @@ max_dbs_open = 2000
 ;q = 1
 
 [compactions]
-_default = [{db_fragmentation, "10%"}, {view_fragmentation, "10%"}, {from, "21:00"}, {to, "05:00"}]
-cryovaca = [{db_fragmentation, "70%"}, {view_fragmentation, "60%"}]
-cryovacb = [{db_fragmentation, "70%"}, {view_fragmentation, "60%"}]
-mjddaq2 = [{db_fragmentation, "70%"}, {view_fragmentation, "60%"}]
-onsite_analysis_mac_pro = [{db_fragmentation, "70%"}, {view_fragmentation, "60%"}]
+_default = [{db_fragmentation, "1%"}, {view_fragmentation, "1%"}]
+cryovaca = 
+cryovacb = 
+mjddaq2 = 
+onsite_analysis_mac_pro = 
 
 [chttpd]
 port = 5984
@@ -113,7 +113,7 @@ ssl_certificate_max_depth = 1
 ; changing this.
 [admins]
 ;admin = mysecretpassword
-varner = -pbkdf2-189185a72b32627c517fc836a02d5ad2c98a9b5c,2a540ffe9d0a65840c93c2f216862d2b,10
+varner = -pbkdf2-f5d0430a6b8b00e775cda1cdf8d494484cf95266,804460d3ca86555839c9cd243dc7f730,10
 orca = 
 tedeschi = -pbkdf2-2bd53c3dee0c73e67c23ac5d60e1d82f01765495,2372cb1387c8be556ed281f960bf26a8,10
 
