Add the needed "retain_ip: true" to the docker-compose.yml file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ volumes:
 services:
   db:
     image: registry.spin.nersc.gov/varnerrl/mjd-couchdb:v1.0
+    retain_ip: true
     cap_drop:
     - ALL
     cap_add:
